did some auth fixed products
